fixed-add-post-overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@
         @apply text-red-500 text-sm text-center mb-2;
     }
     .authForm{
-        @apply flex flex-col justify-center items-center md:p-8 md:bg-white md:rounded-lg md:shadow-md;
+        @apply flex flex-col justify-center items-center p-5 md:p-8 bg-white rounded-lg shadow-md;
     }
 
 }
